2003-09-04  Andras Varga

	* implemented "Consult module declaration" button

2003-09-02  Andras Varga

	* canvas.tcl, main.tcl: GUI layout rearranged a bit for usability 
	reasons

	* plotedit.tcl: cursor changes over canvas items

2003-09-01  Andras Varga

	* canvas.tcl, widgets.tcl: turned on Undo/Redo feature in editor
	also added to Edit menu and toolbar. Requires fairly recent Tcl/Tk.

2003-08-12  Andras Varga

	* combobox.tcl: on FocusOut event, it always restored the old content
	of the entry, so it wasn't possible to type something that was not
	in the list

2003-08-12  Andras Varga
	
	* enhancement: in Submodule and Network Properties dialogs, choose 
	module list from combobox.
	
	* enhancement: in Connection Properties dialogs, module and gate 
	can be selected from combo, and channel also. Input is also fully 
	validated. Remaining issue: gate directions not observed.

FIXME!!! when submodule has random placement, strange thing happpens 
after OK'ing Props dialog

2003-08-11  Andras Varga

	* bugfix: using the Module/Submodule/Connection/Network/Channel/... 
	Properties dialogs didn't make the NED file "dirty" (=with unsaved
	changes) and didn't update the canvas (changing the name in the 
	dialog didn't reflect on the canvas)

	* enhancement: input in Properties dialogs are now (mostly) validated

	* "Machines" pages removed from Module/Submodule dialogs (was obsolete).

2003-08-04  Andras Varga

	* bugfix: if a simple module was typed in the NED text, it was lost 
	when switching back to graphics

	* bugfix: when a loop connection was deleted in graphics mode, 
	empty for loop was left behind which is syntactically invalid in NED

	* bugfix: disallow reserved words as name for submodules, modules, etc.
	TBD not checked for parameter names yet

2003-08-01  Andras Varga

	* random submodule placement (used when display string doesn't contain
	coordinates) changed to work identically to Tkenv: x is random and
	y keeps growing

2003-07-28  Andras Varga
